[package]
name = "Server"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
secrecy = "0.10.3"
subtle-encoding = "0.5.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
fips203 = { version = "0.4.3", features=["ml-kem-1024", "default-rng"] }
fips204 = { version = "0.4.6", features=["ml-dsa-87", "default-rng"] }